<resources>
    <string name="app_name">Wisedrive Dealer</string>

    <string name="str_login">Login</string>
    <string name="str_account">Account</string>
    <string name="account_empty">Account can not be empty</string>
    <string name="account_too_long">Account can not exceed 64 characters</string>
    <string name="account_starts_with_space">Account can not starts with space</string>
    <string name="account_literal_null">Account can not be \"null\"</string>
    <string name="login_failed">Login failed</string>
    <string name="title_peer_msg">Peer to peer message</string>
    <string name="title_channel_message">Channel message</string>
    <string name="hint_friend">Friends name</string>
    <string name="hint_channel">Channel name</string>
    <string name="hint_enable_offline_message">Enable offline message</string>
    <string name="account_cannot_be_yourself">Account can not be yourself</string>
    <string name="channel_name_empty">Channel name can not be empty</string>
    <string name="channel_name_too_long">Channel name can not exceed 64 characters</string>
    <string name="channel_name_starts_with_space">Channel name can not start with space</string>
    <string name="channel_name_literal_null">Channel name can not be \"null\"</string>
    <string name="btn_chat">Chat</string>
    <string name="btn_join">Join</string>

    <string name="channel_title" translatable="false">%s(%d)</string>
    <string name="join_channel_failed">Join channel failed</string>
    <string name="single_input">Single line input</string>\
    <string name="str_send">Send</string>
    <string name="send_msg_failed">Failed to send message</string>
    <string name="peer_offline">Peer is offline</string>
    <string name="message_cached">Message cached by server</string>
    <string name="reconnecting">Network reconnecting ...</string>
    <string name="account_offline">Connection lost</string>
    <string name="notred">#F20B0B</string>
    <string name="edit"><u>Edit</u></string>
    <string name="view_all"><b><u>View All</u></b></string>
    <string name="app_version_name">3.0</string>
    <string name="abt_exp_no">View Details</string>
    <string name="approved">Approved</string>
    <string name="re_inspect">Re-Inspect</string>
    <string name="cooling_nperiod">Approved\nCooling Period</string>
    <string-array name="rangeSlider">
        <item>2000</item>
        <item>2021</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="pack">Package</string>
    <string name="customer">Customer</string>
    <string name="profile">Profile</string>
    <string name="payment_expl">Check your payment history</string>
    <string name="sold_cars_exp">Check status of your cars</string>
    <string name="offers_exp">Customised offers for you</string>
    <string name="notification_exp">Manage how you want to be notified</string>
    <string name="cool_period"><u>Cool Period</u></string>

    <string-array name="pricerangeSlider">
        <item>0</item>
        <item>10000000</item>
    </string-array>
    <string-array name="kmsrangeSlider">
        <item>0</item>
        <item>100000</item>
    </string-array>
    <string name="text_to_style">4 New Lead From 3 Cars</string>
    <string name="skip">Skip</string>

</resources>
