<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DealerProfile">

    <RelativeLayout
        android:id="@+id/cv_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:id="@+id/rl_back"
            android:layout_width="wrap_content"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/go_back_home"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:src="@drawable/back_black">

            </ImageView>

            <TextView
                android:id="@+id/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/go_back_home"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:fontFamily="@font/poppins_semibold"
                android:text="Menu"
                android:textColor="@color/text_profile"
                android:textSize="17dp">

            </TextView>
        </RelativeLayout>


    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/cv_header">

        <RelativeLayout
            android:id="@+id/rl_profile_complete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/dealer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/dealer_logo"
                android:fontFamily="@font/poppins_semibold"
                android:text="Sagar Cars"
                android:textColor="@color/black"
                android:textSize="18dp">

            </TextView>

            <TextView
                android:id="@+id/dealer_phoneno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dealer_name"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="9018243262"
                android:textColor="@color/cement"
                android:textSize="18dp">

            </TextView>
            <ImageView
                android:id="@+id/dealer_logo"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/premium">

            </ImageView>

            <View
                android:id="@+id/line_view1"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_below="@+id/dealer_phoneno"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/bg_location">

            </View>


            <RelativeLayout
                android:id="@+id/rl_all_payments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_below="@+id/line_view1">
                <TextView
                    android:id="@+id/tv_allpayments"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="All Payments"
                    android:textColor="@color/black"
                    android:textSize="18dp">

                </TextView>
                <TextView
                    android:id="@+id/tv_payment_expl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_allpayments"
                    android:layout_marginTop="3dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/payment_expl"
                    android:textColor="@color/cement"
                    android:textSize="13dp">

                </TextView>

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_all_activations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_below="@+id/rl_all_payments">

                <TextView
                    android:id="@+id/tv_sold_cars"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="Sold Cars"
                    android:textColor="@color/black"
                    android:textSize="16dp">

                </TextView>
                <TextView
                    android:id="@+id/tv_count_activations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_sold_cars"
                    android:layout_marginTop="3dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/sold_cars_exp"
                    android:textColor="@color/cement"
                    android:textSize="13dp">

                </TextView>
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rl_all_offers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/rl_all_activations">

                <TextView
                    android:id="@+id/tv_alloffers"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="Offers"
                    android:textColor="@color/black"
                    android:textSize="18dp">

                </TextView>
                <TextView
                    android:id="@+id/tv_offer_exp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_alloffers"
                    android:layout_marginTop="3dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/offers_exp"
                    android:textColor="@color/cement"
                    android:textSize="13dp">

                </TextView>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_all_claims"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_below="@+id/rl_all_offers">

                <TextView
                    android:id="@+id/tv_allclaims"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="Notifications"
                    android:textColor="@color/black"
                    android:textSize="18dp">

                </TextView>

                <TextView
                    android:id="@+id/tv_noti_exp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_allclaims"
                    android:layout_marginTop="3dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/notification_exp"
                    android:textColor="@color/cement"
                    android:textSize="13dp">

                </TextView>
            </RelativeLayout>

            <View
                android:id="@+id/line_view2"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_below="@+id/rl_all_claims"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/bg_location">

            </View>
            <RelativeLayout
                android:id="@+id/rl_tnc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_below="@+id/line_view2">
                <ImageView
                    android:id="@+id/iv_tnc"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/tnc"
                    android:layout_centerVertical="true">

                </ImageView>
                <TextView
                    android:id="@+id/tv_tnc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/iv_tnc"
                    android:layout_marginStart="20dp"
                    android:text="Terms &amp; Conditions"
                    android:textSize="18dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_semibold">

                </TextView>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_wpol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_below="@+id/rl_tnc">
                <ImageView
                    android:id="@+id/iv_wa_pol"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/pr_po"
                    android:layout_centerVertical="true">

                </ImageView>
                <TextView
                    android:id="@+id/tv_warrantypolicy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/iv_wa_pol"
                    android:layout_centerVertical="true"
                    android:text="Warranty Policy"
                    android:textSize="18dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_semibold">

                </TextView>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_pr_pol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_below="@+id/rl_wpol">
                <ImageView
                    android:id="@+id/iv_pr_pol"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/pr_po"
                    android:layout_centerVertical="true">

                </ImageView>
                <TextView
                    android:id="@+id/tv_pr_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/iv_pr_pol"
                    android:text="Privacy Policy"
                    android:textSize="18dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_semibold">

                </TextView>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_hns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_below="@+id/rl_pr_pol">
                <ImageView
                    android:id="@+id/iv_hns"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/suprt"
                    android:layout_centerVertical="true">

                </ImageView>
                <TextView
                    android:id="@+id/tv_hns"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/iv_hns"
                    android:text="Help &amp; Support"
                    android:textSize="18dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_semibold">

                </TextView>
            </RelativeLayout>

            <RelativeLayout

                android:id="@+id/rl_log_out"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="30dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/rl_hns"
                android:layout_marginBottom="10dp"
                android:background="@drawable/cv_req_insp"
                >

                <TextView
                    android:id="@+id/tv_check_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="Logout"
                    android:textColor="@color/white"
                    android:textSize="17dp">

                </TextView>
            </RelativeLayout>

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_log_out"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/label_v"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/app_version_name"
                android:textColor="@color/black"
                android:textSize="14dp">

            </TextView>

            <TextView
                android:id="@+id/label_v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_log_out"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppins_regular"
                android:text="version  "
                android:textColor="@color/black"
                android:textSize="14dp">

            </TextView>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/idPBLoading"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateTint="@color/orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>